test/parallel/forall/may-vs-must-par/expr-mustpar-arr-err-iter1par.chpl
// forall-expression

use iters;

var arrIter1par = forall IND in iter1par() do IND;
writeln(arrIter1par);
